src/objects/Opportunity_CheckList__c.object
<CustomObject>
    <fields>
        <fullName>MX_WB_MasterChecklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Checklist Id</label>
        <referenceTo>Master_Checklist__c</referenceTo>
        <relationshipLabel>Opportunity CheckList</relationshipLabel>
        <relationshipName>Opportunity_CheckList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity CheckList</relationshipLabel>
        <relationshipName>Opportunity_CheckList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_Valor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valor</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity CheckList</label>
    <nameField>
        <label>Nombre de Master</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity CheckList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>